--- a/employ.html
+++ b/employ.html
@@ -346,7 +346,7 @@
 </div>
 <!--导航-end-->
 
-<div id="page">
+<div id="page" class="vueSwiper">
     <div class="employ-banner">
         <!--banner-->
         <!--<img class="hidden-xs hidden-sm" src="images/emplyee_banner.png" width="100%"/>-->
@@ -384,7 +384,7 @@
     <li class="active">新闻中心</li>
 </ul>-->
 
-        <div class="bg-white vueSwiper" id="tabEmploy">
+        <div class="bg-white" id="tabEmploy">
             <ul class="tab-nav-common tab-nav-employ">
                 <li @click="getIndex(1)" class="tab-item" id='schoolPost' style="cursor:pointer;">招聘岗位</li>
                 <li class="tab-item" id='schoolPost' style="cursor:pointer;">招聘流程</li>
