--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
             pageBanner:1, //页码
             rowsBanner:10, //每页条数
             liveBanner:0, //未冻结 1冻结
-            selectAddr:1, //banner图  1--首页  2--人才招聘  3--社会招聘 4--海科学院
+            selectAddr:1, //banner图  1--首页z  2--人才招聘校园招聘 employ.html  3--社会招聘z 4--海科学院z
 
             // 首页信息
             pageInfo:1,
@@ -1270,7 +1270,7 @@
             pageVideo:1,
             rowsVideo:10,
             liveVideo:0,
-            otherShow:1,//1-首页；2--海科视角-新闻媒体-宣传片 3--人才招聘-海外人才招进 4--人才招聘-校园招聘
+            otherShow:1,//1-首页z；2--海科视角-新闻媒体-宣传片z  3--人才招聘-海外人才招进  4--人才招聘校园招聘z employ.html
         },
         mounted(){
             this.getLunbo()
