--- a/about_award.html
+++ b/about_award.html
@@ -521,7 +521,10 @@
         el: '#vueSwiper',
         data: {
             type: 1, //奖项荣誉
-            list: '',
+            list:[
+                {title:'123',imgpath:'./images/banner2.png'},
+                {title:'456',imgpath:'./images/banner2.png'},
+            ],
             page:1,
             rows:10,
             live:0
