--- a/about_introduce.html
+++ b/about_introduce.html
@@ -456,7 +456,9 @@
         el: '.vueSwiper',
         data: {
             type: 12, //集团介绍
-            list: {},
+            list: {
+                content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p>'
+            },
             page:1,
             rows:10,
             live:0
