--- a/about_social.html
+++ b/about_social.html
@@ -489,7 +489,10 @@
         el: '#vueSwiper',
         data: {
             type: 2, //社会责任
-            list: '',
+            list: [
+                {imgPath:'./images/banner2.png',title:'123',id:1},
+                {imgPath:'./images/banner2.png',title:'456',id:2}
+            ],
             page:1,
             rows:10,
             live:0,
