--- a/industry_medicine.html
+++ b/industry_medicine.html
@@ -510,11 +510,11 @@
             list: [
                 {
                     title:'1',
-                    imgPath:'1111'
+                    imgPath:'./images/banner2.png'
                 },
                 {
                     title:'2',
-                    imgPath:'1111'
+                    imgPath:'./images/banner2.png'
                 }
             ],
             curIndex: -1, //点击显示图片
