--- a/inter_business.html
+++ b/inter_business.html
@@ -1208,7 +1208,10 @@
         el: '#vueSwiper',
         data: {
             type: 5, //运营体系
-            list: '',
+            list:[
+                {title:'123',time:'2019/07/01',content:'1111111111',imgPath:'./images/banner2.png'},
+                {title:'456',time:'2019/07/21',content:'22222',imgPath:'./images/banner2.png'}
+            ],
             page:1,
             rows:10,
             live:0
