--- a/media_news.html
+++ b/media_news.html
@@ -511,7 +511,7 @@
         },
         mounted(){
             this.getList()
-            this.getPage()
+            //this.getPage()
         },
         methods: {
             getList(){
