--- a/about_organize.html
+++ b/about_organize.html
@@ -369,7 +369,7 @@
 
                                     <li class="features-item swiper-slide animate-box fadeInUp animated-fast" v-for="(item,index) in list">
                                         <h3 class="animate-box about-time-h fadeInUp animated-fast">{{item.year}}</h3>
-                                        <div class="zlzz-div" style="min-height: 100px;">
+                                        <div class="zlzz-div">
                                             <img :src="item.imgPath" width="100%"/>
                                             <p class="zlzz-p">{{item.content}}</p>
                                         </div>
@@ -649,7 +649,9 @@
         el: '#vueSwiper',
         data: {
             type: 3, //时间轴
-            list: '',
+            list: [
+                {year:2018,content:'123',imgPath:'./images/banner2.png'}
+            ],
             page:1,
             rows:10,
             live:0,
