--- a/employ_social.html
+++ b/employ_social.html
@@ -349,7 +349,7 @@
 <div id="page" class="vueSwiper">
     <!-- 社会招聘banner -->
     <div class="employ-banner text-center">
-        <img :src="lunbo[0].imgPath" alt="图1" width="100%">
+        <img v-if="lunbo" :src="lunbo.imgPath" alt="图1" width="100%">
         <div class="banner-txt">
             <h1 class="banner-txt-h1">海科集团社会招聘</h1>
             <h2 class="banner-txt-h2">Haike Group Social Recruitment</h2>
@@ -570,7 +570,7 @@
                     success: (res) => {
                         var res = JSON.parse(res)
                         console.log(res);
-                        this.lunbo = res.data.rows
+                        this.lunbo = res.data.rows[0]
                         console.log(this.lunbo);
                     },
                     error(err){
