--- a/inter_safe.html
+++ b/inter_safe.html
@@ -355,7 +355,7 @@
             <span>Safety Management System with Chinese Characteristics</span>
         </p>
     </div>
-    <div class="container sii-build inter-build">
+    <div class="container sii-build inter-build" id="vueSwiper">
         <div class="build-top col-sm10 animate-box hidden-xs hidden-sm">
             <span class="build-line animate-box"></span>
             <p class="animate-box">海科安全管理体系=杜邦安全管理体系+“双重”预防体系+安全标准化</p>
@@ -521,7 +521,9 @@
     new Vue({
         el: '#vueSwiper',
         data: {
-            list: '',
+            list: {
+                content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p><img src="images/banner.png">'
+            },
             page:1,
             rows:10,
             live:0
