--- a/person_overseas.html
+++ b/person_overseas.html
@@ -355,7 +355,7 @@
         <img class="hidden-xs hidden-sm" src="images/Overseas.png" width="100%"/>
         <!--视频-->
         <div class="same-player employ-player mob-employ-player" id="playEmploy">
-            <video class="same-video" :src="videoList.videoPath"></video>
+            <video v-if="videoList" class="same-video" :src="videoList.videoPath"></video>
             <a data-toggle="modal" data-target="#videoplaybox"> <img src="images/play.jpg" class="videoed"/></a>
         </div>
 
@@ -513,7 +513,11 @@
 
                 <h3 class="person_overseas-title animate-box">我们的足迹</h3>
 
-                <div class="person_overseas-zj1 animate-box fadeInUp animated-fast" v-for="(item,index) in zuji"><!--1-->
+                <div
+                        class="animate-box fadeInUp animated-fast"
+                        v-for="(item,index) in zuji"
+                        :class="index%2==0?'person_overseas-zj1':'person_overseas-zj2'"
+                >
                     <!--<img src="images/person_overseas001.png" width="60%"/>
                     <div class="person-xj">
                         <h3>波士顿大学<span> 专业宣讲</span></h3><br/>
@@ -527,7 +531,7 @@
                     <img :src="item.imgPath" width="60%"/>
                     <div class="person-xj" v-if="index==0">
                         <h3>波士顿大学<span> 专业宣讲</span></h3><br/>
-                        <span class="person-eg">BOSTON UNIVERSITY</span>
+                        <span class="person-eg">{{item.titleEN}}</span>
                         <span class="person-tri"></span>
                     </div>
                     <p>
@@ -818,38 +822,26 @@
         bringToFront: false
         //autoRotate:true
     });
-
-
-    $("#playEmploy").hover(function () {
-        $('.videoed').show();
-    }, function () {
-        $('.videoed').hide();
-    });
-
-    $('.videoed').click(function () { //这个视频被点击后执行
-        var videohtml = '<video width="100%" height="auto" controls id="haivideo"><source src="images/banner.mp4" type="video/mp4" /><embed type="application/x-shockwave-flash" src="images/banner.mp4" width="100%" height="auto" quality="high"></video>';
-        $("#videoplaybox").find(".modal-body").html(videohtml);
-        var myVideo = document.getElementById("haivideo");
-        myVideo.play();
-    });
-    $('#videoplaybox').on('hidden.bs.modal', function () {
-        var myVideo = document.getElementById("haivideo");
-        myVideo.pause();
-    });
-
 </script>
 <script>
     new Vue({
         el: '.vueSwiper',
         data: {
-            type: 8, //我们的足迹
-            zuji: '',
-            gangwei:'', // type 51
-
+            zuji: [
+                {title:'123',titleEN:'zhang',imgPath:'./images/banner2.png'},
+                {title:'456',titleEN:'zhang222',imgPath:'./images/banner2.png'}
+            ],
             page:1,
             rows:10,
             live:0,
 
+
+            gangwei:[
+                {
+                    title:'1',adress:'2',jobRequirements:'3',salary:'4',
+                    titleEN:'1',adressEN:'2',jobRequirementsEN:'3',salaryEN:'4'
+                }
+            ],
             page1:1,
             rows1:10,
             live1:0,
@@ -862,7 +854,9 @@
             selectAddr:2, //banner图  1--首页  2--人才招聘  3--社会招聘 4--海科学院*/
 
             // 视频列表
-            videoList:[],
+            videoList:{
+                videoPath:'./images/banner.mp4'
+            },
             pageVideo:1,
             rowsVideo:10,
             liveVideo:0,
@@ -872,7 +866,28 @@
             this.getZuji()
             this.getGangwei()
             this.getVideo()
+
+
             //this.getLunbo()
+
+            this.$nextTick(()=>{
+                $("#playEmploy").hover(function () {
+                    $('.videoed').show();
+                }, function () {
+                    $('.videoed').hide();
+                });
+
+                $('.videoed').click(function () { //这个视频被点击后执行
+                    var videohtml = '<video width="100%" height="auto" controls id="haivideo"><source src="images/banner.mp4" type="video/mp4" /><embed type="application/x-shockwave-flash" src="images/banner.mp4" width="100%" height="auto" quality="high"></video>';
+                    $("#videoplaybox").find(".modal-body").html(videohtml);
+                    var myVideo = document.getElementById("haivideo");
+                    myVideo.play();
+                });
+                $('#videoplaybox').on('hidden.bs.modal', function () {
+                    var myVideo = document.getElementById("haivideo");
+                    myVideo.pause();
+                });
+            })
         },
         methods: {
             getZuji(){
