--- a/inter_intellect.html
+++ b/inter_intellect.html
@@ -400,7 +400,7 @@
                                     </p>
                                 </div>
                                 <div class="col-sm-5">
-                                    <img src="images/build03.png" width="100%" class="img-responsive">
+                                    <img :src="item.imgPath" width="100%" class="img-responsive">
                                 </div>
                             </li>
                             <!--<li class="row tab-box">
